[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctm-robotics"
version = "0.1.0"
description = "Continuous Thought Machines for Interpretable Robot Control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "gymnasium>=0.29",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["ctm_robotics*"]
